// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`heredoc.coffee 1`] = `
a = """
  b
"""

a = '''
  b
'''

a = """
  #{b}
"""

a = '''
  #{b}
'''

a = "
  #{b}
"

a = '
  #{b}
'

a = """
  '''
"""

a = '''
  """
'''

a = """
  '"""

a = '''
  "'''

a = """
  '
"""

a = '''
  "
'''

a = """'
  """

a = '''"
  '''
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a = '''
  b
'''

a = '''
  b
'''

a = """
  #{b}
"""

a = '''
  #{b}
'''

a = "
  #{b}
"

a = '
  #{b}
'

a = """
  '''
"""

a = '''
  """
'''

a = """
  '"""

a = '''
  "'''

a = '''
  '
'''

a = '''
  "
'''

a = ''''
  '''

a = '''"
  '''

`;

exports[`heredoc.coffee 2`] = `
a = """
  b
"""

a = '''
  b
'''

a = """
  #{b}
"""

a = '''
  #{b}
'''

a = "
  #{b}
"

a = '
  #{b}
'

a = """
  '''
"""

a = '''
  """
'''

a = """
  '"""

a = '''
  "'''

a = """
  '
"""

a = '''
  "
'''

a = """'
  """

a = '''"
  '''
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a = """
  b
"""

a = """
  b
"""

a = """
  #{b}
"""

a = '''
  #{b}
'''

a = "
  #{b}
"

a = '
  #{b}
'

a = """
  '''
"""

a = '''
  """
'''

a = """
  '"""

a = '''
  "'''

a = """
  '
"""

a = """
  "
"""

a = """'
  """

a = """"
  """

`;
